crates/overseer-tui/tests/snapshots/snapshots__session_switched.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: screen(&term)
---










── session s2 ──
❯ add a parser
❯
 workspace  /repo                       test-model · $0.0000
