crates/overseer-tui/tests/snapshots/snapshots__slash_completed.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: screen(&term)
---










❯ /search
 workspace  /repo                        test-model · $0.000
