crates/overseer-tui/tests/snapshots/snapshots__slash_menu.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: screen(&term)
---










❯ /s
 workspace  /repo                        test-model · $0.000
