crates/overseer-tui/tests/snapshots/snapshots__tool_lines.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: s
---











❯ run the checks
  ● bash  cargo test
  ● read  src/app.rs
    permission denied
  ⠙ grep  todo src
⠙ running grep  0s  0 tok  (esc to interrupt)
❯
