crates/overseer-tui/tests/snapshots/snapshots__transcript_expanded.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: s
---










✓ bash make test
✓ bash make test
    42 tests passed
    0 failed
3 lines · type to filter · ↑↓/pgdn · tab expand tools · esc
❯
 workspace  /repo                       test-model · $0.0000
