crates/overseer-tui/tests/snapshots/snapshots__transcript_filtered.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: screen(&term)
---










❯ fix the flaky test
❯ add a parser
I'll look at the test file.
/ parser▌
❯ add a parser
1 lines · type to filter · ↑↓/pgdn · esc
❯
 workspace  /repo                        test-model · $0.000
