crates/overseer-tui/tests/snapshots/snapshots__transcript_overlay.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: screen(&term)
---










❯ fix the flaky test

❯ add a parser
I'll look at the test file.

❯ add a parser
I'll look at the test file.
4 lines · type to filter · ↑↓/pgdn · tab expand tools · esc
❯ ask anything  ·  ↑ panel  ·  ? keys
 workspace  /repo                       test-model · $0.0000
