crates/overseer-tui/tests/snapshots/snapshots__tree_overlay.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: norm
---










  s2 · [ago] · add a parser
› s1 · [ago] · fix the flaky test · (current)
    ↳ s3 · [ago] · fix the flaky test
↑↓ · enter switch · esc
❯ ask anything  ·  ↑ panel  ·  ? keys
 workspace  /repo                       test-model · $0.0000
