crates/overseer-tui/tests/snapshots/snapshots__turn_done.snap
---
source: crates/overseer-tui/tests/snapshots.rs
expression: screen(&term)
---








❯ fix the flaky test
I'll look at the test file first.

  ls tests/
✓ bash cargo test flaky
— end_turn · 1 step(s) · $0.0010
❯
 workspace  /repo                       test-model · $0.0010
